2.2.3/_sources/gallery/axes_grid1/simple_anchored_artists.rst.txt
.. note::
    :class: sphx-glr-download-link-note

    Click :ref:`here <sphx_glr_download_gallery_axes_grid1_simple_anchored_artists.py>` to download the full example code
.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_axes_grid1_simple_anchored_artists.py:


=======================
Simple Anchored Artists
=======================

This example illustrates the use of the anchored helper classes found in
:py:mod:`~matplotlib.offsetbox` and in the :ref:`toolkit_axesgrid1-index`.
An implementation of a similar figure, but without use of the toolkit,
can be found in :doc:`/gallery/misc/anchored_artists`.




.. image:: /gallery/axes_grid1/images/sphx_glr_simple_anchored_artists_001.png
    :class: sphx-glr-single-img





.. code-block:: python

    import matplotlib.pyplot as plt


    def draw_text(ax):
        from matplotlib.offsetbox import AnchoredText
        at = AnchoredText("Figure 1a",
                          loc=2, prop=dict(size=8), frameon=True,
                          )
        at.patch.set_boxstyle("round,pad=0.,rounding_size=0.2")
        ax.add_artist(at)

        at2 = AnchoredText("Figure 1(b)",
                           loc=3, prop=dict(size=8), frameon=True,
                           bbox_to_anchor=(0., 1.),
                           bbox_transform=ax.transAxes
                           )
        at2.patch.set_boxstyle("round,pad=0.,rounding_size=0.2")
        ax.add_artist(at2)


    def draw_circle(ax):  # circle in the canvas coordinate
        from mpl_toolkits.axes_grid1.anchored_artists import AnchoredDrawingArea
        from matplotlib.patches import Circle
        ada = AnchoredDrawingArea(20, 20, 0, 0,
                                  loc=1, pad=0., frameon=False)
        p = Circle((10, 10), 10)
        ada.da.add_artist(p)
        ax.add_artist(ada)


    def draw_ellipse(ax):
        from mpl_toolkits.axes_grid1.anchored_artists import AnchoredEllipse
        # draw an ellipse of width=0.1, height=0.15 in the data coordinate
        ae = AnchoredEllipse(ax.transData, width=0.1, height=0.15, angle=0.,
                             loc=3, pad=0.5, borderpad=0.4, frameon=True)

        ax.add_artist(ae)


    def draw_sizebar(ax):
        from mpl_toolkits.axes_grid1.anchored_artists import AnchoredSizeBar
        # draw a horizontal bar with length of 0.1 in Data coordinate
        # (ax.transData) with a label underneath.
        asb = AnchoredSizeBar(ax.transData,
                              0.1,
                              r"1$^{\prime}$",
                              loc=8,
                              pad=0.1, borderpad=0.5, sep=5,
                              frameon=False)
        ax.add_artist(asb)


    if 1:
        ax = plt.gca()
        ax.set_aspect(1.)

        draw_text(ax)
        draw_circle(ax)
        draw_ellipse(ax)
        draw_sizebar(ax)

        plt.show()


.. _sphx_glr_download_gallery_axes_grid1_simple_anchored_artists.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download

     :download:`Download Python source code: simple_anchored_artists.py <simple_anchored_artists.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: simple_anchored_artists.ipynb <simple_anchored_artists.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
